...
				{currentOrder && (
					<NativeTabs.BottomAccessory>
						<FloatingOrderCard currentOrder={currentOrder} />
					</NativeTabs.BottomAccessory>
				)}
				<NativeTabs.Trigger name="(home)">
					<NativeTabsTriggerLabel>{t`Home`}</NativeTabsTriggerLabel>
					<NativeTabsTriggerIcon
						drawable="home"
						sf={{
							default: 'house',
							selected: 'house.fill',
						}}
...
							default: 'person',
							selected: 'person.fill',
						}}
					/>
				</NativeTabs.Trigger>
				<NativeTabs.Trigger role="more" name="more">
					<NativeTabsTriggerLabel>{t`More`}</NativeTabsTriggerLabel>
					<NativeTabsTriggerIcon drawable="photos" />
				</NativeTabs.Trigger>
			</NativeTabs>
		</>
	)
}
...
