...
		authenticationToken: passAuthToken, // Use pass-specific token
		backgroundColor: '#3D6039',
		description: 'TOLO Pass',
		foregroundColor: '#FFFFFF',
		formatVersion: 1,
		labelColor: '#DDDDDD',
		organizationName: 'TOLO',
		passTypeIdentifier: PASS_TYPE_IDENTIFIER,
		serialNumber,
		sharingProhibited: true,
		teamIdentifier: TEAM_IDENTIFIER,
		webServiceURL: 'https://app.tolo.cafe/api/webhooks/passes',
	})
...
